Convert record classes and Map.of() to Java 8 compatible alternatives
Co-Authored-By: 于泽棋 <finyu@webank.com>